@@ -3,6 +3,7 @@
 
   <copyright>
     <year>2010</year>
+    <year>2011</year>
     <holder>Pierre Wieser</holder>
   </copyright>
 
@@ -70,8 +71,8 @@
 
   <revhistory>
     <revision>
-      <revnumber>&appnamex; User's Manual v 3.0</revnumber>
-      <date>August 2010</date>
+      <revnumber>&appnamex; User's Manual v 3.1</revnumber>
+      <date>March 2011</date>
       <revdescription>
         <para role="author">
           Pierre Wieser
